# mesh-fitter-cpp

./: .gitignore  LICENSE  README.md
deploy/: package-lock.json  package.json
fitter/: CMakeLists.txt  README.md
fitter/src/3dMethods/: CMakeLists.txt  icp.h  methods_config.in  pca.cpp  pca.h
fitter/test/: 3dMethods.cpp  CMakeLists.txt  icp.cpp
fitter/test/test_data/: test_11D.off  test_11D_rotated.off
